update the shit